# oc-proxy

./: .editorconfig  .gitignore  .lintstagedrc.json  CHANGELOG.md  README.md  biome.json  debug.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.unit.json  vite.config.ts
.github/: dependabot.yml
.husky/: commit-msg
assets/: icon.icns
debug-dumps/: 26034077-5bb0-4ff3-acce-8c78b67ba33c.forwardRequestBody.json  (+9 more)
docs/: dev-database.md  headless-cli.md  (+8 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  auth.rs  backup.rs  bootstrap.rs  config_store.rs  http_api.rs  integration_store.rs  lib.rs  log_store.rs  main.rs  models.rs  proxy.rs  quota.rs  remote_sync.rs  stats_store.rs  user_home.rs  wsl.rs
src-tauri/src-tauri/src/transformer/: tests.rs
src-tauri/src/api/: dto.rs  mod.rs
src-tauri/src/commands/: app.rs  auth.rs  config.rs  integration.rs  logs.rs  mod.rs  provider.rs  quota.rs  remote.rs
src-tauri/src/config/: migrator.rs  mod.rs  schema.rs  validator.rs
src-tauri/src/contract_fixtures/proxy/: extract_token_usage.expected.json
src-tauri/src/domain/: entities.rs  mod.rs
src-tauri/src/mappers/: canonical.rs  engine.rs  helpers.rs  mod.rs  normalize.rs  policy.rs  request.rs  response.rs  response_engine.rs  tests.rs
src-tauri/src/mappers/adapters/: anthropic_messages.rs  mod.rs  openai_chat_completions.rs  openai_responses.rs
src-tauri/src/proxy/: failover.rs  net.rs  observability.rs  pipeline.rs  routing.rs  stream_bridge.rs
src-tauri/src/proxy/stream_bridge/: emit.rs  mod.rs  parser.rs  registry.rs
src-tauri/src/quota/: parser.rs
src-tauri/src/remote_sync/: git_client.rs
src-tauri/src/services/: config_service.rs  error.rs  group_backup_service.rs  integration_service.rs  mod.rs  provider_service.rs  quota_service.rs  remote_rules_service.rs
src-tauri/src/transformer/: messages_to_responses.rs  mod.rs  registry.rs  tests.rs  types.rs
src-tauri/src/transformer/cc/: claude.rs  mod.rs  openai.rs  openai2.rs
src-tauri/src/transformer/convert/: claude_gemini.rs  claude_openai.rs  claude_openai_responses.rs  claude_openai_responses_stream.rs  claude_openai_stream.rs  common.rs  mod.rs  openai_chat_responses.rs  openai_chat_responses_stream.rs  openai_claude.rs
src-tauri/src/transformer/cx/: mod.rs
src-tauri/src/transformer/cx/chat/: claude.rs  mod.rs  openai.rs  openai2.rs
src-tauri/src/transformer/cx/responses/: claude.rs  mod.rs  openai.rs  openai2.rs
(+204 files in other folders)
