[package]
name = "ai-open-router-tauri"
version = "0.2.8"
description = "AI Open Router Tauri app"
authors = ["AI Open Router"]
license = "MIT"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
toml_edit = "0.22"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
