[package]
name = "ai-open-router-tauri"
version = "0.2.10"
description = "AI Open Router Tauri app"
authors = ["AI Open Router"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal"] }
toml_edit = "0.23"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
rust-embed = "8"
mime_guess = "2"
directories = "5"

[[bin]]
name = "ai-open-router"
path = "src/bin/ai_open_router.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
